When REST Client @Consumes has multiple values, choose the first one